maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:22: error: type mismatch;
 found   : Unit
 required: Int
      return();
            ^